add blog api added

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,4 @@
+/* https://next-js-blog-app-tawny.vercel.app/ */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -25,3 +26,5 @@ body {
     text-wrap: balance;
   }
 }
+
+
